Fix one last spacing, I promise

--- a/static/styles/main.sass
+++ b/static/styles/main.sass
@@ -327,6 +327,8 @@ body
             margin-top: $y-height / 2
 
     #footer
+        margin-top: $y-height / 2
+
         & > div
             padding-left: $x-width / 2
 
